--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -136,3 +136,11 @@ transform: translateX(0); */
 .style1{
   width: 80%; height: 300px; border-radius: 21px 21px 0 0;
 }
+.cont1{
+  background-color: #F6E9D9;
+  border-radius: 12px;
+}
+
+.my-thing{
+  
+}
