--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,9 +31,42 @@ a:hover {
 }
 
 .home-banner {
-  background-image: url("/public/home-landing.jpg");
-  background-size: contain;
-  max-height: 650px;
+  background-image: url("/public/Home Banner.png");
+  background-repeat: repeat-y;
+  background-position: 100%;
+  background-position-y: 20%;
+  background-size: fill;
+}
+
+.videoText {
+  position: relative;
+  min-height: 950px;
+}
+.videoText span {
+display: inline-block;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: #fff;
+font-size: 36px;
+text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /*z-index: -1;*/
+  /*opacity: .15;*/
+  overflow: hidden;
+}
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .about-banner {
@@ -52,10 +85,17 @@ a:hover {
   background-size: cover;
 }
 
+.landing {
+  color: #00C774;
+}
 
+.l1 {
+  color: #033B6C;
+}
 .navbar-brand {
   width: 15%;
 }
+
 .middleTile {
   border-radius: 10px;
 }
